# Testplan:
# - restore the wallet
# - send 1 CRPRT token via Spark token transfer screen
# - check that balance decreased

appId: com.layerzwallet.mobile
jsEngine: graaljs
---
- runFlow:
    file: subflows/wallet-restore.yml
    env:
      MNEMONIC: ${MAESTRO_TEST_MNEMONIC}

# switch network
- runFlow:
    file: subflows/network-switch.yml
    env:
      NETWORK: 'spark'
# wait for the balance to load
- assertVisible:
    id: 'LayerBalance'
- extendedWaitUntil:
    notVisible: '— BTC'
    timeout: 60000

- copyTextFrom:
    id: 'token-amount-btkn1mjpzcvak0mk9xv4kjdztwl6udk5rkgzetyz4qdz8375mk0wpvpqqe0alhv'
- evalScript: ${output.balance = maestro.copiedText}
- evalScript: ${console.log(output.balance);}
- evalScript: ${console.log(parseFloat(output.balance));}
# guard against NaN:
- evalScript: ${if (parseFloat(output.balance) > 0) {} else throw new Error("bad balance = " + output.balance)  }

# ok, balance copied, lets send it so hardcoded address from our 2nd account
- tapOn:
    id: 'token-row-btkn1mjpzcvak0mk9xv4kjdztwl6udk5rkgzetyz4qdz8375mk0wpvpqqe0alhv'
- runFlow:
    file: subflows/input-spark-address.yml
- tapOn:
    id: 'send-address-next-button'
- waitForAnimationToEnd
- tapOn:
    id: 'send-amount-acc-input'
    point: 10%,10% # avoid max button
- inputText: '1'
- tapOn:
    id: 'send-amount-acc-next-button'
- waitForAnimationToEnd
- assertVisible: '1 CRPRT'
- tapOn:
    id: 'send-confirm-button'
- extendedWaitUntil:
    visible:
      id: 'send-success-text'
    timeout: 29000
- waitForAnimationToEnd
- tapOn: 'Back to Wallet'
- runFlow: # sleeping till balance updates
    file: subflows/sleep.yml
    env:
      TIMEOUT: 12000

# checking that balance is updated
- copyTextFrom:
    id: 'token-amount-btkn1mjpzcvak0mk9xv4kjdztwl6udk5rkgzetyz4qdz8375mk0wpvpqqe0alhv'
- evalScript: ${output.balance2 = maestro.copiedText}
- evalScript: ${console.log(output.balance2);}
- evalScript: ${console.log(parseFloat(output.balance2));}
# check:
- evalScript: ${if (output.balance > output.balance2) {} else throw new Error("bad balance = " + output.balance + " vs " + output.balance2)  }
